restrict Depends: glx-alternative-nvidia to (<< 0.7)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7109 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -293,6 +293,7 @@ Pre-Depends:
  ${nvidia:legacy-check},
 Depends:
  glx-alternative-nvidia (>= 0.5),
+ glx-alternative-nvidia (<< 0.7),
  nvidia-modprobe,
  ${misc:Depends}
 Conflicts:
