depend on a setuid root Xserver
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@7113 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -78,6 +78,7 @@ dkms_source	 = debian/$(nvidia)-kernel-dkms/usr/src/$(module)-$(version)
 comma		 = ,
 xorg_depends	 = $(foreach abi, $(XORG_ABI_LIST), xorg-video-abi-$(abi) |)
 xorg_depends	+= $(comma) xserver-xorg-core $(XORG_BOUND)
+xorg_depends	+= $(comma) xserver-xorg-legacy | xserver-xorg-core (<< 2:1.18)
 xorg_provides	 = xorg-driver-video
 
 
