run nv_unregister_procfs() during error unwinding upon (failed) loading of the module
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7164 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,5 +1,6 @@
 # kernel support
 drm-driver-legacy.patch
+unregister_proc_on_failure.patch
 
 # build system updates
 separate-makefile-kbuild.patch
