Add deprecated-cpu-events.patch, dma-fence-rename.patch and vmf-address.patch to fix builds on 4.10
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7176 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,6 +1,9 @@
 # kernel support
 do-div-cast.patch
 nvidia-drm-master-dev.patch
+deprecated-cpu-events.patch
+dma-fence-rename.patch
+vmf-address.patch
 
 # build system updates
 use-kbuild-compiler.patch
