backport unregister_procfs_on_failure.patch from 340
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@7184 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,6 +1,7 @@
 # kernel support
 fix-typos.patch
 drm-driver-legacy.patch
+unregister_procfs_on_failure.patch
 deprecated-cpu-events.patch
 
 # build system updates
