--- a/debian/control
+++ b/debian/control
@@ -1169,7 +1169,7 @@ Description: NVIDIA OpenCL installable client driver (ICD)${nvidia:LegacyDesc}
  CPUs, GPUs and other processors.
  .
  This package provides the NVIDIA installable client driver (ICD) for OpenCL
- which supports NVIDIA GPUs.
+ which supports NVIDIA GPUs. This ICD supports OpenCL 1.x only.
 
 Package: nvidia-libopencl1
 Architecture: i386 amd64 ppc64el
@@ -1202,7 +1202,7 @@ Description: NVIDIA OpenCL ICD Loader library
  hardware) is required to run OpenCL applications.
  .
  This package contains the ICD Loader library provided by NVIDIA. This library
- supports OpenCL 1.x only.
+ supports OpenCL 1.x and 2.0 only.
 
 Package: nvidia-detect
 Section: non-free/x11
