--- a/debian/control
+++ b/debian/control
@@ -657,6 +657,9 @@ Depends:
  ${misc:Depends}
 Recommends:
  ${nvidia}-vulkan-icd,
+Conflicts:
+# temporary workaround for #864477
+ libgl1-${nvidia}-glx,
 Description: NVIDIA Vulkan driver - common files
  Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
  .
