nvidia-legacy-check.preinst: enable verbose debug mode with DEBUG_NVIDIA_LEGACY_CHECK=yes
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7274 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-legacy-check.preinst.in
+++ b/debian/nvidia-legacy-check.preinst.in
@@ -264,6 +264,10 @@ LEGACY_PCIIDS="
 10DE10D8
 "
 
+if [ "$DEBUG_NVIDIA_LEGACY_CHECK" = "yes" ]; then
+	set -x
+fi
+
 find_unsupported_gpus()
 {
 	# Check for GPUs that are only supported up to $LEGACY_DRIVER
