nvidia-legacy-check: bump Pre-Depends: nvidia-installer-cleanup to (>= 20151021)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7275 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -173,7 +173,7 @@ Multi-Arch: foreign
 Pre-Depends:
  debconf (>= 0.5) | debconf-2.0,
  pciutils,
- nvidia-installer-cleanup,
+ nvidia-installer-cleanup (>= 20151021),
 Depends:
  ${misc:Depends}
 Description: check for NVIDIA GPUs requiring a legacy driver
