--- a/debian/control
+++ b/debian/control
@@ -607,7 +607,7 @@ Description: NVIDIA OpenCL installable client driver (ICD)${nvidia:LegacyDesc}
  CPUs, GPUs and other processors.
  .
  This package provides the NVIDIA installable client driver (ICD) for OpenCL
- which supports NVIDIA GPUs.
+ which supports NVIDIA GPUs. This ICD supports OpenCL 1.x only.
 
 Package: nvidia-opencl-icd-ia32
 Section: non-free/oldlibs
