--- a/debian/control
+++ b/debian/control
@@ -705,7 +705,7 @@ Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  nvidia-vulkan-common,
- libvulkan1,
+ libvulkan1 (>= 1.0.42),
  libglx-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
 Suggests:
