prevent parallel build
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@7302 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -15,6 +15,7 @@ conftest-via-kbuild.patch
 disable-cc_version_check.patch
 disable-xen_sanity_check.patch
 not-silent.patch
+not-parallel.patch
 use-nv-kernel-ARCH.o_shipped.patch
 avoid-ld.gold.patch
 
