Add patch to fix kernel module build on 4.11, closes 865964
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@7305 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -2,6 +2,7 @@
 fix-typos.patch
 drm-driver-legacy.patch
 deprecated-cpu-events.patch
+drm-unload.patch
 
 # build system updates
 separate-makefile-kbuild.patch
