Add support for buster/sid in nvidia-detect for #866126
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7307 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -139,7 +139,7 @@ fi
 		else
 			echo "Oops. Internal error 8 ($NVGA)"
 		fi
-	elif grep -q "stretch\|^9" /etc/debian_version
+	elif grep -q "stretch\|^9\|buster\|^10" /etc/debian_version
 	then
 		if [[ -n ${VERSIONS[999]} ]]; then
 			if [[ -n ${VERSIONS[340]} ]]; then
