Update symbols files for 384.47
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/384@7315 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-ptxjitcompiler.symbols.in
+++ b/debian/libnvidia-ptxjitcompiler.symbols.in
@@ -1,4 +1,4 @@
-libnvidia-ptxjitcompiler.so.#VERSION# #PACKAGE# #MINVER#
+libnvidia-ptxjitcompiler.so.1 #PACKAGE# #MINVER#
  __cuda_CallJitEntryPoint@Base 361
  nvPTXCompilerCompile@Base 378
  nvPTXCompilerCreate@Base 378
