Add nvidia-vulkan-nonglvnd-common for the non GLVND Vulkan ICD json file.
Upstream now ships a template, so implement a rule in debian/rules to
create 2 copies at build time to reference both GLX implementations, and
use dh-exec to ship each in its own package.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/384@7316 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -20,6 +20,7 @@ Build-Depends:
  libxext6 [!ppc64el],
  quilt,
  po-debconf,
+ dh-exec,
 Build-Conflicts:
  libglvnd-dev,
 Standards-Version: 3.9.8
@@ -691,20 +692,36 @@ Depends:
 Recommends:
  ${nvidia}-vulkan-icd,
 Conflicts:
-# temporary workaround for #864477
- libgl1-${nvidia}-glx,
+ libgl1-nvidia-glx,
+ nvidia-vulkan-non-glvnd-common,
 Description: NVIDIA Vulkan driver - common files
  Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
  .
  This package provides the common files for the NVIDIA installable client
- driver (ICD) for Vulkan.
+ driver (ICD) for Vulkan, GLVND version.
+
+Package: nvidia-vulkan-nonglvnd-common
+Architecture: i386 amd64
+Multi-Arch: foreign
+Depends:
+ ${misc:Depends}
+Recommends:
+ ${nvidia}-vulkan-icd,
+Conflicts:
+ libgl1-nvidia-glvnd-glx,
+ nvidia-vulkan-common,
+Description: NVIDIA Vulkan driver - common files
+ Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
+ .
+ This package provides the common files for the NVIDIA installable client
+ driver (ICD) for Vulkan, non-GLVND version.
 
 #Package: ${nvidia}-vulkan-icd
 Package: nvidia-vulkan-icd
 Architecture: i386 amd64
 Multi-Arch: same
 Depends:
- nvidia-vulkan-common,
+ nvidia-vulkan-common | nvidia-vulkan-nonglvnd-common,
  libvulkan1 (>= 1.0.42),
  libglx-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
