Add fatal-signal.patch and vm-fault.patch to fix build on 4.11
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7322 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -4,6 +4,8 @@ unregister_procfs_on_failure.patch
 deprecated-cpu-events.patch
 vmf-address.patch
 drm-unload.patch
+fatal-signal.patch
+vm-fault.patch
 
 # build system updates
 separate-makefile-kbuild.patch
