armhf does not have vulkan/glvnd libraries, so don't try to generate nvidia_icd.json.template
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/384@7342 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -138,9 +138,11 @@ compare-copyright-license: LICENSE.txt
 
 # NVIDIA ships a template, the library name depends on whether GLVND or not is used
 nvidia_icd.json: unpack-stamp
-	sed 's/__NV_VK_ICD__/libGLX_nvidia.so.0/' NVIDIA-Linux/nvidia_icd.json.template > \
+	test ! -f NVIDIA-Linux/nvidia_icd.json.template || \
+		sed 's/__NV_VK_ICD__/libGLX_nvidia.so.0/' NVIDIA-Linux/nvidia_icd.json.template > \
 		debian/nvidia_icd.json.glvnd
-	sed 's/__NV_VK_ICD__/libGL.so.1/' NVIDIA-Linux/nvidia_icd.json.template > \
+	test ! -f NVIDIA-Linux/nvidia_icd.json.template || \
+		sed 's/__NV_VK_ICD__/libGL.so.1/' NVIDIA-Linux/nvidia_icd.json.template > \
 		debian/nvidia_icd.json.nonglvnd
 
 
