Add patch to fix kernel mod build on 4.12
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7367 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -6,6 +6,7 @@ vmf-address.patch
 drm-unload.patch
 fatal-signal.patch
 vm-fault.patch
+set-memory.patch
 
 # build system updates
 separate-makefile-kbuild.patch
