backport some patches from branches/340 to support Linux 4.11/4.12
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/378@7381 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -4,6 +4,8 @@ nvidia-drm-master-dev.patch
 deprecated-cpu-events.patch
 dma-fence-rename.patch
 vmf-address.patch
+fatal-signal.patch
+set-memory.patch
 
 # build system updates
 use-kbuild-compiler.patch
