Add patches to fix kmod builds on 4.11 and 4.12
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/378@7388 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -6,6 +6,11 @@ dma-fence-rename.patch
 vmf-address.patch
 fatal-signal.patch
 set-memory.patch
+#HAS_UVM#kref-refcount.patch
+drm-encoder.patch
+drm-unload.patch
+drm-helper-mode.patch
+drm-vma-fault.patch
 
 # build system updates
 use-kbuild-compiler.patch
