rename libgldispatch0-nvidia to libglvnd0-nvidia, matching libglvnd0
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/381@7395 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libglvnd0-nvidia.lintian-overrides.in
+++ b/debian/libglvnd0-nvidia.lintian-overrides.in
@@ -5,7 +5,7 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
-# These are expected to be built from source and packaged independently
-# from the NVIDIA drivers, soon.
+# These are built from src:libglvnd and packaged independently
+# from the NVIDIA drivers, too.
 package-name-doesnt-match-sonames libGLdispatch0
-symbols-declares-dependency-on-other-package libgldispatch0
+symbols-declares-dependency-on-other-package libglvnd0
